target/generated-sources/antlr4/Practico/Ejercicio_3/SimpleParser.java
// Generated from Practico\Ejercicio_3\Simple.g4 by ANTLR 4.5.1
package Practico.Ejercicio_3;

	import java.util.Map;
	import java.util.HashMap;
	import javax.swing.*;
	import java.util.Scanner;
	import java.awt.event.ActionEvent;
	import java.awt.event.ActionListener;
	import java.awt.Dimension;
	import java.awt.BorderLayout;
	import java.awt.Color;
	import java.math.*;
	import Taller.ast.*;
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, BREAK=4, INT=5, FLOAT=6, STR=7, BOOL=8, TRUE=9, 
		FALSE=10, PRINT=11, INPUT=12, ENTER=13, ASSIGN=14, MEN=15, MAY=16, MENIG=17, 
		MAYIG=18, IGUAL=19, DIST=20, SUM=21, REST=22, MULT=23, DIV=24, PARENTESIS_A=25, 
		PARENTESIS_C=26, DOSP=27, PUNCOM=28, COMA=29, SIGPESOS=30, PUNTO=31, COMENTARIO=32, 
		MENSAJE=33, COMILLA=34, COMMENT=35, ID=36, NUMERO=37, LETRA=38, DIGITO=39, 
		FIN=40, WS=41;
	public static final int
		RULE_start = 0, RULE_sentencia = 1, RULE_comentario = 2, RULE_asignacion = 3, 
		RULE_b = 4, RULE_valor = 5, RULE_factor = 6, RULE_term = 7, RULE_valorbool = 8, 
		RULE_repeticion = 9, RULE_pregunta = 10, RULE_bloque = 11, RULE_bloqueElse = 12, 
		RULE_operacion = 13, RULE_oprel = 14, RULE_ingresar = 15, RULE_tipo = 16, 
		RULE_mostrar = 17, RULE_mensaje = 18, RULE_elementoMensaje = 19;
	public static final String[] ruleNames = {
		"start", "sentencia", "comentario", "asignacion", "b", "valor", "factor", 
		"term", "valorbool", "repeticion", "pregunta", "bloque", "bloqueElse", 
		"operacion", "oprel", "ingresar", "tipo", "mostrar", "mensaje", "elementoMensaje"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'else'", "'while'", "'break'", "'int'", "'float'", "'str'", 
		"'bool'", "'true'", "'false'", "'print'", "'input'", "'\n'", "'='", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'('", 
		"')'", "':'", "';'", "','", "'$'", "'.'", null, null, "'\"'", "'#'", null, 
		null, null, null, "'&'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IF", "ELSE", "WHILE", "BREAK", "INT", "FLOAT", "STR", "BOOL", "TRUE", 
		"FALSE", "PRINT", "INPUT", "ENTER", "ASSIGN", "MEN", "MAY", "MENIG", "MAYIG", 
		"IGUAL", "DIST", "SUM", "REST", "MULT", "DIV", "PARENTESIS_A", "PARENTESIS_C", 
		"DOSP", "PUNCOM", "COMA", "SIGPESOS", "PUNTO", "COMENTARIO", "MENSAJE", 
		"COMILLA", "COMMENT", "ID", "NUMERO", "LETRA", "DIGITO", "FIN", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Simple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		HashMap<String, Object> Tabla = new HashMap<String, Object>();
		public ArrayList<String> erroresSem = new ArrayList<String>();
		HashMap<String, Object> tablaSimbolos = new HashMap<String, Object>();
		JTextArea areaOutput;
		public SimpleParser(TokenStream input, JTextArea areaOutput) {
			super(input);
			this.areaOutput = areaOutput;
			areaOutput.setText(null);
			_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
		}

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public HashMap<String, Object> tabla;
		public SentenciaContext sentencia;
		public TerminalNode FIN() { return getToken(SimpleParser.FIN, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<TerminalNode> ENTER() { return getTokens(SimpleParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(SimpleParser.ENTER, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StartContext(ParserRuleContext parent, int invokingState, HashMap<String, Object> tabla) {
			super(parent, invokingState);
			this.tabla = tabla;
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start(HashMap<String, Object> tabla) throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState(), tabla);
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

					this.Tabla = tabla;
					
					List<ASTNode> body = new ArrayList<ASTNode>();
				
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				((StartContext)_localctx).sentencia = sentencia();
				body.add(((StartContext)_localctx).sentencia.node);
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ENTER) {
					{
					{
					setState(43);
					match(ENTER);
					}
					}
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << INT) | (1L << FLOAT) | (1L << STR) | (1L << BOOL) | (1L << PRINT) | (1L << COMENTARIO) | (1L << ID))) != 0) );
			for(ASTNode n : body){
					n.execute(tablaSimbolos);
				}
			setState(54);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public ASTNode node;
		public RepeticionContext repeticion;
		public PreguntaContext pregunta;
		public AsignacionContext asignacion;
		public IngresarContext ingresar;
		public MostrarContext mostrar;
		public RepeticionContext repeticion() {
			return getRuleContext(RepeticionContext.class,0);
		}
		public PreguntaContext pregunta() {
			return getRuleContext(PreguntaContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public IngresarContext ingresar() {
			return getRuleContext(IngresarContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public ComentarioContext comentario() {
			return getRuleContext(ComentarioContext.class,0);
		}
		public List<TerminalNode> ENTER() { return getTokens(SimpleParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(SimpleParser.ENTER, i);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			int _alt;
			setState(78);
			switch (_input.LA(1)) {
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				((SentenciaContext)_localctx).repeticion = repeticion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).repeticion.node;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				((SentenciaContext)_localctx).pregunta = pregunta();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).pregunta.node;
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				((SentenciaContext)_localctx).asignacion = asignacion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).asignacion.node;
				}
				break;
			case INT:
			case FLOAT:
			case STR:
			case BOOL:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				((SentenciaContext)_localctx).ingresar = ingresar();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).ingresar.node;
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				((SentenciaContext)_localctx).mostrar = mostrar();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).mostrar.node;
				}
				break;
			case COMENTARIO:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				comentario();
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(72);
						match(ENTER);
						}
						} 
					}
					setState(77);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMENTARIO() { return getToken(SimpleParser.COMENTARIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitComentario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitComentario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comentario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(COMENTARIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public BContext b;
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(SimpleParser.ASSIGN, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((AsignacionContext)_localctx).ID = match(ID);
			setState(83);
			match(ASSIGN);
			setState(84);
			((AsignacionContext)_localctx).b = b();
			((AsignacionContext)_localctx).node =  new Asignacion((((AsignacionContext)_localctx).ID!=null?((AsignacionContext)_localctx).ID.getText():null), ((AsignacionContext)_localctx).b.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public ASTNode node;
		public IngresarContext ingresar;
		public ValorContext valor;
		public ValorboolContext valorbool;
		public IngresarContext ingresar() {
			return getRuleContext(IngresarContext.class,0);
		}
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public ValorboolContext valorbool() {
			return getRuleContext(ValorboolContext.class,0);
		}
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitB(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_b);
		try {
			setState(96);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STR:
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				((BContext)_localctx).ingresar = ingresar();
				((BContext)_localctx).node =  ((BContext)_localctx).ingresar.node;
				}
				break;
			case PARENTESIS_A:
			case MENSAJE:
			case ID:
			case NUMERO:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				((BContext)_localctx).valor = valor();
				((BContext)_localctx).node =  ((BContext)_localctx).valor.node;
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				((BContext)_localctx).valorbool = valorbool();
				((BContext)_localctx).node =  ((BContext)_localctx).valorbool.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public ASTNode node;
		public FactorContext t1;
		public FactorContext t2;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> SUM() { return getTokens(SimpleParser.SUM); }
		public TerminalNode SUM(int i) {
			return getToken(SimpleParser.SUM, i);
		}
		public List<TerminalNode> REST() { return getTokens(SimpleParser.REST); }
		public TerminalNode REST(int i) {
			return getToken(SimpleParser.REST, i);
		}
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitValor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitValor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_valor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((ValorContext)_localctx).t1 = factor();
			((ValorContext)_localctx).node =  ((ValorContext)_localctx).t1.node;
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUM || _la==REST) {
				{
				setState(108);
				switch (_input.LA(1)) {
				case SUM:
					{
					setState(100);
					match(SUM);
					setState(101);
					((ValorContext)_localctx).t2 = factor();
					((ValorContext)_localctx).node =  new Suma(_localctx.node, ((ValorContext)_localctx).t2.node);
					}
					break;
				case REST:
					{
					setState(104);
					match(REST);
					setState(105);
					((ValorContext)_localctx).t2 = factor();
					((ValorContext)_localctx).node =  new Resta(_localctx.node, ((ValorContext)_localctx).t2.node);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public ASTNode node;
		public TermContext t1;
		public TermContext t2;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(SimpleParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(SimpleParser.MULT, i);
		}
		public List<TerminalNode> DIV() { return getTokens(SimpleParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(SimpleParser.DIV, i);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_factor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			((FactorContext)_localctx).t1 = term();
			((FactorContext)_localctx).node =  ((FactorContext)_localctx).t1.node;
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULT || _la==DIV) {
				{
				setState(123);
				switch (_input.LA(1)) {
				case MULT:
					{
					setState(115);
					match(MULT);
					setState(116);
					((FactorContext)_localctx).t2 = term();
					((FactorContext)_localctx).node =  new Multiplicacion(_localctx.node, ((FactorContext)_localctx).t2.node);
					}
					break;
				case DIV:
					{
					setState(119);
					match(DIV);
					setState(120);
					((FactorContext)_localctx).t2 = term();
					((FactorContext)_localctx).node =  new Division(_localctx.node, ((FactorContext)_localctx).t2.node);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public ASTNode node;
		public Token NUMERO;
		public Token ID;
		public Token MENSAJE;
		public ValorContext valor;
		public TerminalNode NUMERO() { return getToken(SimpleParser.NUMERO, 0); }
		public TerminalNode ID() { return getToken(SimpleParser.ID, 0); }
		public TerminalNode MENSAJE() { return getToken(SimpleParser.MENSAJE, 0); }
		public TerminalNode PARENTESIS_A() { return getToken(SimpleParser.PARENTESIS_A, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public TerminalNode PARENTESIS_C() { return getToken(SimpleParser.PARENTESIS_C, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleListener ) ((SimpleListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleVisitor ) return ((SimpleVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}
